# OSMIUM

./: .env.example  .gitignore  COMPILATION.md  COMPILATION_FIXES.md  Cargo.toml  DASHBOARD_README.md  FEATURES.md  FINAL_STATUS.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  README_PYTHON.md  SETUP.md  STATUS.md  STATUS_FINAL.md  TESTING.md  bot.py  build.sh  requirements.txt  start.py  web_dashboard.py
src/: config.rs  main.rs
src/bot/: client.rs  data.rs  mod.rs
src/commands/: config.rs  mod.rs  moderation.rs  scan.rs  security.rs  verification.rs  whitelist.rs
src/dashboard/: api.rs  auth.rs  mod.rs  routes.rs
src/database/: mod.rs  models.rs  queries.rs
src/events/: channel_create.rs  channel_delete.rs  channel_update.rs  emoji_update.rs  guild_ban_add.rs  guild_ban_remove.rs  guild_member_add.rs  guild_member_remove.rs  guild_update.rs  interaction_create.rs  invite_create.rs  invite_delete.rs  message_create.rs  message_delete.rs  message_update.rs  mod.rs  role_create.rs  role_delete.rs  role_update.rs
src/logging/: logger.rs
src/moderation/: ban.rs  clear.rs  kick.rs  lock.rs  mod.rs  mute.rs  warn.rs
src/scanner/: mod.rs  server_scan.rs
src/security/: anti_emoji.rs  anti_ghost_ping.rs  anti_invite.rs  anti_mention.rs  anti_nuke.rs  anti_raid.rs  anti_rename.rs  anti_spam.rs  anti_vanity.rs  beast_mode.rs  mod.rs  whitelist.rs
src/verification/: button.rs  captcha.rs  manager.rs  mod.rs
static/css/: style.css
static/js/: animations.js  config.js
templates/: dashboard.html  index.html  server.html
