[package]
name = "discord-security-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
serenity = { version = "0.12", features = ["full"] }
poise = "0.6"
tokio = { version = "1", features = ["full"] }
mongodb = "2"
deadpool-redis = "0.14"
axum = "0.7"
askama = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
reqwest = { version = "0.11", features = ["json"] }
image = "0.24"
captcha = "0.0.9"
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
dashmap = "5"
once_cell = "1"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "cors"] }
axum-extra = { version = "0.9", features = ["cookie"] }
jsonwebtoken = "9"
base64 = "0.21"
sha2 = "0.10"
futures = "0.3"
redis = { version = "0.24", features = ["tokio-comp"] }
urlencoding = "2.1"
